# csv-metadata-quality-web

./: .drone.yml  .gcloudignore  .gitignore  Procfile  README.md  app.yaml  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  runtime.txt
.github/workflows/: python-app.yml
csv_metadata_quality_web/: main.py
csv_metadata_quality_web/static/css/: style.min.css
csv_metadata_quality_web/templates/: footer.html  head.html  index.html
source/scss/: bootstrap.scss  main.scss  style.scss
static/css/: style.css  style.min.css
templates/: footer.html  head.html  header.html  index.html  process.html  result.html
