[tool.poetry]
name = "csv-metadata-quality-web"
version = "0.0.3"
description = "Simple web interface for the DSpace CSV Metadata Quality tool."
authors = ["Alan Orth <alan.orth@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
csv-metadata-quality = {git = "https://github.com/ilri/csv-metadata-quality.git", tag = "v0.5.0"}
Flask = "^2.0.2"
ansi2html = "^1.6.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
