[project]
name = "csv-metadata-quality-web"
version = "0.0.4"
description = "Simple web interface for the DSpace CSV Metadata Quality tool."
authors = [
    { name = "Alan Orth", email = "git@mjanja.mozmail.com" }
]
license = "AGPL-3.0-only"

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansi2html~=1.9.2",
    "csv-metadata-quality",
    "flask~=2.3.3",
    "gunicorn~=23.0.0",
]

[tool.uv.sources]
csv-metadata-quality = { git = "https://github.com/ilri/csv-metadata-quality", rev = "v0.7.0" }

[dependency-groups]
dev = [
    "black~=25.1.0",
    "flake8~=7.1.1",
]
